--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: "Proxima nova";
+  src: url("/Fonts/Proxima_Nova/proximanova_regular.ttf");
+}
+
+
 * {
   padding: 0;
   margin: 0;
@@ -94,16 +100,16 @@ h6 {
 :root {
   /* fonts */
   --SF-Pro-Display: 'SF Pro Display', sans-serif;
-  --Proxima-Nova: 'Proxima Nova Condensed', sans-serif;
+  --Proxima-Nova: 'Proxima Nova', sans-serif;
   --ccelephant: 'Elephant', sans-serif;
 
   /* sizing */
-  --title-size: 48px;
-  --sub-title-size: 16px;
-  --secondary-title-size: 32px;
-  --description-size: 24px;
+  --title-size: 56px;
+  --sub-title-size: 24px;
+  --secondary-title-size: 48px;
+  --description-size: 32px;
   --numbers-size: 96px;
-  --navigation-text-size: 24px;
+  --navigation-text-size: 32px;
 
   /* colors */
   --main-bg-color: #0C1621;
@@ -121,6 +127,30 @@ h6 {
 
 /* ------------ */
 
+#title {
+  font-family: var(--ccelephant);
+  font-size: var(--secondary-title-size);
+  font-weight: var(--bold);
+  color: var(--main-text-color);
+}
+
+#descr {
+
+  font-family: var(--Proxima-Nova);
+  font-size: var(--sub-title-size);
+  font-weight: var(--normal);
+  color: var(--main-text-color);
+}
+
+/* container */
+
+.container {
+  position: relative;
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+}
+
 /* header */
 
 header {
@@ -128,8 +158,15 @@ header {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 10;
 
   margin-top: 10px;
+
+  .logo {
+    width: 166px;
+    height: 80px;
+    background: url("/public/icons/Primary.svg") no-repeat center;
+  }
 
 
   .header-container {
@@ -179,3 +216,292 @@ header {
   }
 }
 
+/* section 1 swiper */
+
+.section-1 {
+  width: 100%;
+  height: 678px;
+  margin-top: 100px;
+
+  .container {
+    padding: 10px 0;
+  }
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.image-slider {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+.image-slider img {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-pagination .swiper-pagination-bullet {
+  width: 20px;
+  height: 20px;
+  background: var(--secondary-bg-color);
+}
+
+/* section 2 */
+
+.section-2 {
+  width: 100%;
+  height: 120px;
+
+  .container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: var(--secondary-bg-color);
+
+    .title_box {
+      width: 300px;
+      height: 120px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .title {
+        font-family: var(--ccelephant);
+        font-size: var(--secondary-title-size);
+        font-weight: var(--normal);
+        color: var(--main-text-color);
+      }
+    }
+
+    .box {
+      width: 80%;
+      height: 100%;
+      position: relative;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      box-shadow: inset 80px 0 30px -20px rgba(255, 255, 255, 0.2), inset -50px 0 30px -20px rgba(255, 255, 255, 0.7);
+
+      swiper-container {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+
+        img {
+          width: 160px;
+        }
+      }
+    }
+
+
+  }
+}
+
+
+
+.section-3 {
+  padding: 10px 0;
+
+  .container {
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+    gap: 10%;
+
+    padding: 20px 0;
+
+    .title {
+      width: 45%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      gap: 120px;
+
+      h1 {
+        font-family: var(--ccelephant);
+        font-size: var(--title-size);
+        font-weight: var(--bold);
+        color: var(--main-text-color);
+      }
+
+      button {
+        width: 380px;
+        padding: 10px;
+        border-radius: 20px;
+        background: var(--main-bg-color);
+        font-family: var(--Proxima-Nova);
+        font-size: var(--description-size);
+        color: var(--inverse-text-color);
+
+      }
+    }
+
+    .descr {
+      position: relative;
+      padding-top: 100px;
+      width: 45%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      p {
+        z-index: 1;
+        font-family: var(--Proxima-Nova);
+        font-size: var(--description-size);
+        color: var(--main-text-color);
+        font-weight: var(--normal);
+
+        span {
+          font-weight: var(--black);
+        }
+      }
+
+      .star {
+        position: absolute;
+        top: 75px;
+        left: -20px;
+        width: 48px;
+        height: 48px;
+        background: url("/public/icons/star_48dp_RGB\(255\,\ 196\,\ 0\)_FILL1_wght700_GRAD200_opsz48.svg");
+      }
+
+      .star2 {
+        position: absolute;
+        bottom: -5px;
+        right: 190px;
+        transform: rotate(45deg);
+        width: 48px;
+        height: 48px;
+        background: url("/public/icons/star_48dp_RGB\(255\,\ 196\,\ 0\)_FILL1_wght700_GRAD200_opsz48.svg");
+      }
+    }
+  }
+}
+
+
+.section-4 {
+  padding: 10px 0;
+  background: var(--main-bg-color);
+
+  .container {
+    padding: 40px 0;
+
+    .title {
+      z-index: 100;
+      font-family: var(--ccelephant);
+      font-size: var(--title-size);
+      font-weight: var(--bold);
+      color: var(--inverse-text-color);
+      margin-bottom: 10px;
+    }
+
+    .descr {
+      margin: 30px 0;
+      width: 80%;
+      font-family: var(--Proxima-Nova);
+      font-size: var(--description-size);
+      color: var(--inverse-text-color);
+      font-weight: var(--normal);
+    }
+
+    button {
+      margin-top: 20px;
+      width: 300px;
+      padding: 10px 0;
+      border-radius: 30px;
+      background: var(--inverse-text-color);
+      font-family: var(--Proxima-Nova);
+      font-size: var(--description-size);
+      color: var(--main-text-color);
+    }
+
+    .star3 {
+      position: absolute;
+      transform: rotate(45deg);
+      top: 25px;
+      left: -20px;
+      width: 48px;
+      height: 48px;
+      background: url("/public/icons/star_48dp_RGB\(255\,\ 196\,\ 0\)_FILL1_wght700_GRAD200_opsz48.svg");
+    }
+  }
+}
+
+
+.section-5 {
+  padding: 10px 0;
+
+  .container {
+    padding: 10px 0;
+
+    .top {
+      height: 200px;
+      display: flex;
+      align-items: end;
+      justify-content: space-between;
+
+      .title {
+        width: 30%;
+        font-family: var(--ccelephant);
+        font-size: var(--title-size);
+        font-weight: var(--bold);
+        color: var(--main-text-color);
+      }
+
+      .descr {
+        width: 50%;
+        font-family: var(--Proxima-Nova);
+        font-size: var(--description-size);
+        font-weight: var(--normal);
+        color: var(--main-text-color);
+      }
+    }
+
+
+    .grid_box {
+      margin: 20px 0;
+      width: 100%;
+      height: 100%;
+      display: grid;
+      gap: 20px;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+
+      .block-1,
+      .block-2,
+      .block-3,
+      .block-4 {
+        background: var(--secondary-bg-color);
+        border-radius: 20px;
+        padding: 20px;
+
+      }
+
+      .block-1 {
+        
+        grid-column: 1 / 4;
+        grid-row: 1 / 2;
+      }
+
+      .block-2 {
+        grid-column: 4 / 5;
+        grid-row: 1 / 3;
+      }
+
+      .block-3 {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+      }
+
+      .block-4 {
+        grid-column: 2 / 4;
+        grid-row: 2 / 3;
+      }
+    }
+  }
+}
