--- a/main.css
+++ b/main.css
@@ -7,9 +7,10 @@ body {
 }
 
 .wrapper-rects img {
-  top: 0;
+	top: 0;
 	position: absolute;
 	z-index: -1;
+	width: 100%;
 }
 
 header {
@@ -20,7 +21,7 @@ header {
 	padding: 10px 20px;
 	background-color: transparent;
 	margin: 0 auto;
-  padding-top: 40px;
+	padding-top: 40px;
 }
 
 .logo img {
@@ -92,22 +93,97 @@ nav ul li a {
 }
 
 .swiper {
-	width: 90%;
-  margin: 0 auto;
+	position: relative;
+	width: 80%;
+	margin: 20px auto;
+	border-radius: 20px;
+	/* border-style: solid;
+	border-width: 5px;
+	border-color: white lightblue yellow; */
+
 }
 
 .swiper img {
-  margin: 20px 0;
+	margin: 0px auto;
 	width: 100%;
-  height: 533px;
+	height: 533px;
 	object-fit: cover;
 	border-radius: 20px;
-  
+
+
 }
 
-.partners {
+.wrapper-for-img {
+	position: absolute;
+	top: 40%;
+	left: 50%;
+	translate: -50% -50%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 90%;
+	height: 60%;
+}
+
+.logo-image img {
+	width: 220px;
+	height: 106px;
+	margin: 0;
+}
+
+
+.text-image {
+	font-family: "SF Pro Display";
+	color: white;
+	font-weight: 400;
+	font-size: 40px;
+}
+
+.partners-container {
+	position: relative;
+	width: 100%;
+
+}
+
+.partners-wrapper {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 20px auto;
+	width: 80%;
+	height: 100px;
 	text-align: center;
-	padding: 20px 0;
+
+}
+
+.partners-container::after {
+	content: "";
+	width: 100%;
+
+	position: absolute;
+
+	top: 0;
+	height: 4px;
+
+	background: rgb(2, 143, 223);
+	background: -moz-linear-gradient(40deg, rgba(2, 143, 223, 1) 34%, rgba(2, 166, 223, 1) 47%);
+	background: -webkit-linear-gradient(40deg, rgba(2, 143, 223, 1) 34%, rgba(2, 166, 223, 1) 47%);
+	background: linear-gradient(40deg, rgba(2, 143, 223, 1) 34%, rgba(2, 166, 223, 1) 47%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#028fdf", endColorstr="#02a6df", GradientType=1);
+}
+
+
+.our-partners {
+	font-family: Proxima Nova;
+	color: white;
+	font-weight: 700;
+	font-size: 38px;
+}
+
+
+.partners-wrapper {
+	display: flex;
+
 }
 
 .partners-logos img {
