--- a/main.css
+++ b/main.css
@@ -191,6 +191,85 @@ nav ul li a {
 	margin: 0 10px;
 }
 
+.employees-container {
+	position: relative;
+	margin: 100px auto;
+	width: 80%;
+	height: 564px;
+	border: 1px red dotted;
+}
+
+.employees h1 {
+	font-family: SF Pro Display;
+	font-weight: 400;
+	font-size: 48px;
+	margin: 0;
+	color: white;
+
+}
+
+.employees h1 b {
+	color: grey;
+}
+
+.light-text {
+	width: 50%;
+	height: 400px;
+	border: 1px yellow dotted;
+	margin-top: 50px;
+}
+
+.light-text h3 {
+	margin: 0;
+	font-family: Proxima Nova;
+	font-weight: 700;
+	font-size: 20px;
+	color: white;
+}
+
+.light-text p {
+	font-family: Proxima Nova;
+	color: grey;
+	font-weight: 400;
+	font-size: 16px;
+	margin: 10px auto;
+}
+
+
+.contact-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 217px;
+	height: 50px;
+	background: linear-gradient(#028FDF, #005484);
+	border-radius: 5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .about {
 	padding: 20px;
 }
