--- a/main.css
+++ b/main.css
@@ -192,11 +192,16 @@ nav ul li a {
 }
 
 .employees-container {
+	display: flex;	
+	/* align-items: end; */
 	position: relative;
 	margin: 100px auto;
 	width: 80%;
 	height: 564px;
-	border: 1px red dotted;
+}
+
+.employees {
+	width: 100%;
 }
 
 .employees h1 {
@@ -213,10 +218,10 @@ nav ul li a {
 }
 
 .light-text {
-	width: 50%;
+	width: 95%;
 	height: 400px;
-	border: 1px yellow dotted;
 	margin-top: 50px;
+	
 }
 
 .light-text h3 {
@@ -225,6 +230,7 @@ nav ul li a {
 	font-weight: 700;
 	font-size: 20px;
 	color: white;
+	
 }
 
 .light-text p {
@@ -232,7 +238,7 @@ nav ul li a {
 	color: grey;
 	font-weight: 400;
 	font-size: 16px;
-	margin: 10px auto;
+	margin: 10px 0;
 }
 
 
@@ -244,21 +250,145 @@ nav ul li a {
 	height: 50px;
 	background: linear-gradient(#028FDF, #005484);
 	border-radius: 5px;
+	margin-top: 85px;
+}
+
+.video-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 95%;
+	height: 400px;
+	border-radius: 20px;
+	background: linear-gradient(#000000, #0C1621);
+	margin-top: 164px;
+}
+
+.wrapper-button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 150px;
+	height: 50px;
+	background-color: #028FDF;
+	border-radius: 30px;
+}
+
+.play-button {
+	display: flex;
+	gap: 10px;
+	color: #FFF;
+	font-family: Proxima Nova;
+	font-size: 20px;
+	font-weight: 700;
+}
+
+.values-container {
+	width: 80%;
+	height: 306px;
+	margin: 100px auto;
+}
+
+.values-text h2 {
+	width: 100%;
+	height: 57px;
+	font-family: SF Pro Display;
+	font-weight: 700;
+	font-size: 48px;
+	margin: 0;
+	color: white;
+}
+
+.small-containers {
+	display: flex;
+	justify-content: space-between;
+	margin: 50px 0;
+}
+
+.small-containers h3 {
+	font-family: Proxima Nova;
+	color: white;
+	font-weight: 700;
+	font-size: 24px;
+	margin: 0;
+}
+
+.small-containers p {
+	font-family: Proxima Nova;
+	font-weight: 400;
+	font-size: 18px;
+	color: white;
 }
 
 
+#care {
+	width: 20%;
+	height: 199px;
+	border-radius: 20px;
+	border: 1px #028FDF solid;
 
+}
 
+#confidence {
+	width: 20%;
+	height: 199px;
+	border-radius: 20px;
+	border: 1px #028FDF solid;
+}
 
+#result {
+	width: 20%;
+	height: 199px;
+	border-radius: 20px;
+	border: 1px #028FDF solid;
+}
 
+#loyalty {
+	width: 20%;
+	height: 199px;
+	border-radius: 20px;
+	border: 1px #028FDF solid;
+}
 
+.text-wrapper {
+	margin: 20px 20px 13px 20px;
+}
 
+.text-wrapper p {
+	margin: 5px 0 0 0;
+}
 
+.our-service-container {
+	width: 80%;
+	height: 870px;
+	border: 1px red dotted;
+	margin: 100px auto;
+}
 
+.our-service-text {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	height: 57px;
+	border: 1px orange dotted;
+}
 
+.our-service-text h2 {
+	font-family: SF Pro Display;
+	font-size: 48px;
+	font-weight: 700;
+	color: white;
+	margin: 0;
+}
 
+.our-service-text p {
+	font-family: Proxima Nova;
+	font-size: 16px;
+	font-weight: 400;
+	color: white;
+	margin: 0;
 
-
+}
 
 
 
