--- a/main.css
+++ b/main.css
@@ -192,7 +192,7 @@ nav ul li a {
 }
 
 .employees-container {
-	display: flex;	
+	display: flex;
 	/* align-items: end; */
 	position: relative;
 	margin: 100px auto;
@@ -221,7 +221,7 @@ nav ul li a {
 	width: 95%;
 	height: 400px;
 	margin-top: 50px;
-	
+
 }
 
 .light-text h3 {
@@ -230,7 +230,7 @@ nav ul li a {
 	font-weight: 700;
 	font-size: 20px;
 	color: white;
-	
+
 }
 
 .light-text p {
@@ -389,6 +389,121 @@ nav ul li a {
 	margin: 0;
 
 }
+
+.triple-container {
+	width: 100%;
+	height: 199px;
+	margin-top: 50px;
+	border: 1px purple dotted;
+}
+
+.triple-wrapper {
+	display: flex;
+	justify-content: space-evenly;
+
+}
+
+.triple-wrapper h3 {
+	font-family: Proxima Nova;
+	font-size: 24px;
+	font-weight: 700;
+	color: white;
+	margin: 0;
+}
+
+.triple-wrapper p {
+	font-family: Proxima Nova;
+	font-size: 18px;
+	font-weight: 400;
+	color: white;
+}
+
+#executive-search {
+	width: 25%;
+	height: 199px;
+	background-color: #028FDF;
+	border-radius: 20px;
+}
+
+#it-search {
+	width: 25%;
+	height: 199px;
+	border-radius: 20px;
+	border: 1px #028FDF solid;
+}
+
+#massive-search {
+	width: 25%;
+	height: 199px;
+	border-radius: 20px;
+	border: 1px #028FDF solid;
+}
+
+.twice-container {
+	width: 100%;
+	height: 326px;
+	border: 1px pink dotted;
+	margin-top: 20px;
+}
+
+.twice-wrapper {
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.twice-wrapper h3 {
+	font-family: Proxima Nova;
+	font-size: 24px;
+	font-weight: 700;
+	color: white;
+}
+
+.twice-wrapper p {
+	font-family: Proxima Nova;
+	font-size: 18px;
+	font-weight: 400;
+	color: white;
+}
+
+#special {
+	width: 60%;
+}
+
+#hr-consalting {
+	border: 1px #028FDF solid;
+	border-radius: 20px;
+	width: 25%;
+	height: 326px;
+}
+
+#teaching-employees {
+	border: 1px #028FDF solid;
+	border-radius: 20px;
+	width: 57%;
+	height: 326px;
+	background: #028FDF;
+	overflow: hidden;
+}
+
+#teaching-employees img{
+	width: 457px;
+	height: 273px;
+	margin-left: 445px;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
