--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
 	font-family: Proxima Nova, sans-serif;
 	margin: 0;
@@ -251,7 +255,10 @@ nav ul li a {
 	background: linear-gradient(#028FDF, #005484);
 	border-radius: 5px;
 	margin-top: 85px;
+	cursor: pointer;
 }
+
+
 
 .video-container {
 	display: flex;
@@ -322,7 +329,7 @@ nav ul li a {
 
 
 #care {
-	width: 20%;
+	width: 24%;
 	height: 199px;
 	border-radius: 20px;
 	border: 1px #028FDF solid;
@@ -330,21 +337,21 @@ nav ul li a {
 }
 
 #confidence {
-	width: 20%;
+	width: 24%;
 	height: 199px;
 	border-radius: 20px;
 	border: 1px #028FDF solid;
 }
 
 #result {
-	width: 20%;
+	width: 24%;
 	height: 199px;
 	border-radius: 20px;
 	border: 1px #028FDF solid;
 }
 
 #loyalty {
-	width: 20%;
+	width: 24%;
 	height: 199px;
 	border-radius: 20px;
 	border: 1px #028FDF solid;
@@ -361,7 +368,6 @@ nav ul li a {
 .our-service-container {
 	width: 80%;
 	height: 870px;
-	border: 1px red dotted;
 	margin: 100px auto;
 }
 
@@ -370,7 +376,6 @@ nav ul li a {
 	justify-content: space-between;
 	width: 100%;
 	height: 57px;
-	border: 1px orange dotted;
 }
 
 .our-service-text h2 {
@@ -394,12 +399,11 @@ nav ul li a {
 	width: 100%;
 	height: 199px;
 	margin-top: 50px;
-	border: 1px purple dotted;
 }
 
 .triple-wrapper {
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-between;
 
 }
 
@@ -419,21 +423,21 @@ nav ul li a {
 }
 
 #executive-search {
-	width: 25%;
+	width: 32%;
 	height: 199px;
 	background-color: #028FDF;
 	border-radius: 20px;
 }
 
 #it-search {
-	width: 25%;
+	width: 32%;
 	height: 199px;
 	border-radius: 20px;
 	border: 1px #028FDF solid;
 }
 
 #massive-search {
-	width: 25%;
+	width: 32%;
 	height: 199px;
 	border-radius: 20px;
 	border: 1px #028FDF solid;
@@ -442,13 +446,12 @@ nav ul li a {
 .twice-container {
 	width: 100%;
 	height: 326px;
-	border: 1px pink dotted;
 	margin-top: 20px;
 }
 
 .twice-wrapper {
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-between;
 }
 
 .twice-wrapper h3 {
@@ -465,68 +468,332 @@ nav ul li a {
 	color: white;
 }
 
-#special {
-	width: 60%;
-}
+
 
 #hr-consalting {
 	border: 1px #028FDF solid;
 	border-radius: 20px;
-	width: 25%;
+	width: 32%;
 	height: 326px;
 }
 
 #teaching-employees {
 	border: 1px #028FDF solid;
 	border-radius: 20px;
-	width: 57%;
+	width: 66%;
 	height: 326px;
 	background: #028FDF;
 	overflow: hidden;
 }
 
 #teaching-employees img{
-	width: 457px;
-	height: 273px;
-	margin-left: 445px;
+	width: 172%;
+	height: 206px;
 
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.about {
-	padding: 20px;
+.last-container {
+	width: 100%;
+	height: 198px;
+	margin-top: 20px;
 }
 
-.highlight {
-	font-weight: bold;
-	color: #ffd700;
+.last-wrapper {
+	display: flex;
+	justify-content: space-between;
+}
+
+#adaption-personal {
+	border: 1px #028FDF solid;
+	border-radius: 20px;
+	width: 49%;
+	height: 198px;
+}
+
+
+#consultation {
+	border: 1px #028FDF solid;
+	border-radius: 20px;
+	width: 49%;
+	height: 198px;
+	background: linear-gradient(0deg, rgba(0, 0, 0, 0.50) 0%, rgba(0, 0, 0, 0.50) 100%), #028FDF;
+}
+
+.text-wrapper h3 {
+	font-family: Proxima Nova;
+	font-size: 24px;
+	font-weight: 700;
+	color: white;
+}
+
+.text-wrapper p {
+	font-family: Proxima Nova;
+	font-size: 18px;
+	font-weight: 400;
+	color: white;
+
+}
+
+.arrow-text {
+	display: flex;
+	padding: 10px 10px 10px 0;
+	width: 150px;
+	height: 44px;
+	margin-top: 8px;
+}
+
+.arrow-text img {
+	width: 24px;
+	height: 24px;
+	margin-left: 10px;
+}
+
+.arrow-text p {
+	font-family: Proxima Nova;
+	font-size: 20px;
+	font-weight: 600;
+	color: white;
+	margin: 0;
+}
+
+.our-team-container {
+	width: 80%;
+	height: 479px;
+	margin: 100px auto;
+}
+.team-text {
+	display: flex;
+	justify-content: space-between;
+}
+
+.team-text h3 {
+	font-family: SF Pro Display;
+	font-size: 48px;
+	font-weight: 700;
+	color: white;
+	margin: 0;
+	
+}
+
+.team-text p {
+	font-family: Proxima Nova;
+	font-size: 16px;
+	font-weight: 400;
+	color: white;
+	margin: 0;
+
+
+}
+
+.vector img{ 
+	top: 65%;
+	position: absolute;
+	z-index: -1;
+	width: 100%;
+	height: 30%;
+
+} 
+
+.photo-team-container {
+	width: 100%;
+	height: 282px;
+	margin-top: 50px;
+}
+
+.photo-wrappers {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	height: 282px;
+}
+
+.photo-wrappers  {
+	width: 100%;
+	height: 20%;
+}
+
+.photo-wrappers h4 {
+	margin: 15px 0 0 0;
+	font-family: Proxima Nova;
+	font-size: 18px;
+	font-weight: 600;
+	color: white;
+}
+
+.photo-wrappers p {
+	margin-top: 5px;
+	font-family: Proxima Nova;
+	font-size: 16px;
+	font-weight: 400;
+	color: white;
+
+}
+
+#first {
+	width: 217px;
+	height: 282px;
+}
+
+#second {
+	width: 217px;
+	height: 282px;
+}
+
+#third {
+	width: 217px;
+	height: 282px;
+}
+
+#fourth {
+	width: 217px;
+	height: 282px;
+}
+
+#fifth {
+	width: 217px;
+	height: 282px;
+}
+
+#sixth {
+	width: 217px;
+	height: 282px;
+}
+
+.next-buttons {
+	display: flex;
+    align-items: center; /* Выравнивание элементов по вертикали */
+    justify-content: end; /* Выравнивание элементов по горизонтали */
+    height: 85px; 
+	gap: 10px;
+}
+
+.next-buttons button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 45px;
+	height: 45px;
+}
+
+.arrow {
+    background: #028FDF;
+    border-radius: 180px;
+    font-size: 24px; /* Размер стрелок, измените по вашим нуждам */
+    padding: 10px; /* Отступы вокруг стрелок, измените по вашим нуждам */
+    cursor: pointer; /* Курсор в виде руки при наведении */
+}
+
+.reviews-container {
+	width: 80%;
+	height: 676px;
+	margin: 100px auto;
+}
+
+.reviews-text {
+	display: flex;
+	justify-content: space-between;
+}
+
+
+.reviews-text h3 {
+	font-family: SF Pro Display;
+	font-size: 48px;
+	font-weight: 700;
+	color: white;
+	margin: 0;
+}
+
+.reviews-text p {
+	font-family: Proxima Nova;
+	font-size: 16px;
+	font-weight: 400;
+	color: white;
+	margin: 0;
+}
+
+.reviews-wrapper {
+	width: 100%;
+	height: 490px;
+	margin-top: 50px;
+
+}
+
+.reviews-content {
+	display: flex;
+	justify-content: space-between;
+	
 }
 
 footer {
-	text-align: center;
-	padding: 10px 0;
-	background-color: #333;
+	display: flex;
+	justify-content: center;
+	width: 90%;
+	border: 1px red dotted;
+	height: 365px;
 	color: white;
+	padding: 40px;
+	margin: 67px auto;
 }
+
+.footer-wrapper {
+	display: flex;
+	justify-content: space-between;
+	width: 95%;
+	border: 1px orange dotted;
+	height: 213px;
+}
+
+.logo-wrapper {
+	width: 50%;
+	border: 1px purple dotted;
+	height: 212px;
+}
+
+.logo-wrapper img{
+	width: 30%;
+}
+
+.info-wrapper h3 {
+	margin: 0px 0px 20px 0px;
+}
+
+.info-wrapper p {
+	margin: 3px;
+}
+
+.info-wrapper {
+	margin: 0 137px;
+	border: 1px green dotted;
+	height: 210px;
+}
+
+.contacts-wrapper {
+	border: 1px blue dotted;
+	height: 212px;
+	
+}
+
+.contacts-wrapper h3 {
+	margin: 0px 0px 20px 0px;
+}
+
+.contacts-wrapper p {
+	margin: 1px;
+}
+
+#special {
+	margin-bottom: 20px;
+}
+
+.contacts-wrapper img {
+	width: 37px;
+	height: 37px;
+}
+
+.wrappers-two {
+	height: 212px;
+	display: flex;
+	justify-content: space-between;
+}
+
