--- a/main.css
+++ b/main.css
@@ -97,24 +97,24 @@ nav ul li a {
 }
 
 .swiper {
-	position: relative;
 	width: 80%;
 	margin: 20px auto;
 	border-radius: 20px;
 	/* border-style: solid;
 	border-width: 5px;
 	border-color: white lightblue yellow; */
-
 }
 
-.swiper img {
+.swiper-slide {
+	position: relative;
+}
+
+.swiper .swiper-slide > img {
 	margin: 0px auto;
 	width: 100%;
 	height: 533px;
 	object-fit: cover;
 	border-radius: 20px;
-
-
 }
 
 .wrapper-for-img {
@@ -135,7 +135,6 @@ nav ul li a {
 	margin: 0;
 }
 
-
 .text-image {
 	font-family: "SF Pro Display";
 	color: white;
@@ -146,7 +145,6 @@ nav ul li a {
 .partners-container {
 	position: relative;
 	width: 100%;
-
 }
 
 .partners-wrapper {
@@ -157,7 +155,6 @@ nav ul li a {
 	width: 80%;
 	height: 100px;
 	text-align: center;
-
 }
 
 .partners-container::after {
@@ -170,12 +167,23 @@ nav ul li a {
 	height: 4px;
 
 	background: rgb(2, 143, 223);
-	background: -moz-linear-gradient(40deg, rgba(2, 143, 223, 1) 34%, rgba(2, 166, 223, 1) 47%);
-	background: -webkit-linear-gradient(40deg, rgba(2, 143, 223, 1) 34%, rgba(2, 166, 223, 1) 47%);
-	background: linear-gradient(40deg, rgba(2, 143, 223, 1) 34%, rgba(2, 166, 223, 1) 47%);
+	background: -moz-linear-gradient(
+		40deg,
+		rgba(2, 143, 223, 1) 34%,
+		rgba(2, 166, 223, 1) 47%
+	);
+	background: -webkit-linear-gradient(
+		40deg,
+		rgba(2, 143, 223, 1) 34%,
+		rgba(2, 166, 223, 1) 47%
+	);
+	background: linear-gradient(
+		40deg,
+		rgba(2, 143, 223, 1) 34%,
+		rgba(2, 166, 223, 1) 47%
+	);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#028fdf", endColorstr="#02a6df", GradientType=1);
 }
-
 
 .our-partners {
 	font-family: Proxima Nova;
@@ -184,15 +192,31 @@ nav ul li a {
 	font-size: 38px;
 }
 
-
 .partners-wrapper {
 	display: flex;
+	white-space: nowrap;
+	overflow: hidden;
+}
 
+.partners-logos {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	gap: 20px;
+
+	overflow: auto;
+}
+
+.partners-logos::-webkit-scrollbar {
+	display: none;
 }
 
 .partners-logos img {
-	height: 50px;
+	width: 214.609px;
+	height: 67px;
 	margin: 0 10px;
+
+	flex-shrink: 0;
 }
 
 .employees-container {
@@ -214,7 +238,6 @@ nav ul li a {
 	font-size: 48px;
 	margin: 0;
 	color: white;
-
 }
 
 .employees h1 b {
@@ -225,7 +248,6 @@ nav ul li a {
 	width: 95%;
 	height: 400px;
 	margin-top: 50px;
-
 }
 
 .light-text h3 {
@@ -234,7 +256,6 @@ nav ul li a {
 	font-weight: 700;
 	font-size: 20px;
 	color: white;
-
 }
 
 .light-text p {
@@ -245,20 +266,17 @@ nav ul li a {
 	margin: 10px 0;
 }
 
-
 .contact-container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	width: 217px;
 	height: 50px;
-	background: linear-gradient(#028FDF, #005484);
+	background: linear-gradient(#028fdf, #005484);
 	border-radius: 5px;
 	margin-top: 85px;
 	cursor: pointer;
 }
-
-
 
 .video-container {
 	display: flex;
@@ -267,7 +285,7 @@ nav ul li a {
 	width: 95%;
 	height: 400px;
 	border-radius: 20px;
-	background: linear-gradient(#000000, #0C1621);
+	background: linear-gradient(#000000, #0c1621);
 	margin-top: 164px;
 }
 
@@ -277,14 +295,14 @@ nav ul li a {
 	align-items: center;
 	width: 150px;
 	height: 50px;
-	background-color: #028FDF;
+	background-color: #028fdf;
 	border-radius: 30px;
 }
 
 .play-button {
 	display: flex;
 	gap: 10px;
-	color: #FFF;
+	color: #fff;
 	font-family: Proxima Nova;
 	font-size: 20px;
 	font-weight: 700;
@@ -292,8 +310,9 @@ nav ul li a {
 
 .values-container {
 	width: 80%;
-	height: 306px;
-	margin: 100px auto;
+	margin: 0 auto;
+
+	padding-top: 25px;
 }
 
 .values-text h2 {
@@ -327,34 +346,32 @@ nav ul li a {
 	color: white;
 }
 
-
 #care {
 	width: 24%;
 	height: 199px;
 	border-radius: 20px;
-	border: 1px #028FDF solid;
-
+	border: 1px #028fdf solid;
 }
 
 #confidence {
 	width: 24%;
 	height: 199px;
 	border-radius: 20px;
-	border: 1px #028FDF solid;
+	border: 1px #028fdf solid;
 }
 
 #result {
 	width: 24%;
 	height: 199px;
 	border-radius: 20px;
-	border: 1px #028FDF solid;
+	border: 1px #028fdf solid;
 }
 
 #loyalty {
 	width: 24%;
 	height: 199px;
 	border-radius: 20px;
-	border: 1px #028FDF solid;
+	border: 1px #028fdf solid;
 }
 
 .text-wrapper {
@@ -392,7 +409,6 @@ nav ul li a {
 	font-weight: 400;
 	color: white;
 	margin: 0;
-
 }
 
 .triple-container {
@@ -404,7 +420,6 @@ nav ul li a {
 .triple-wrapper {
 	display: flex;
 	justify-content: space-between;
-
 }
 
 .triple-wrapper h3 {
@@ -425,7 +440,7 @@ nav ul li a {
 #executive-search {
 	width: 32%;
 	height: 199px;
-	background-color: #028FDF;
+	background-color: #028fdf;
 	border-radius: 20px;
 }
 
@@ -433,14 +448,14 @@ nav ul li a {
 	width: 32%;
 	height: 199px;
 	border-radius: 20px;
-	border: 1px #028FDF solid;
+	border: 1px #028fdf solid;
 }
 
 #massive-search {
 	width: 32%;
 	height: 199px;
 	border-radius: 20px;
-	border: 1px #028FDF solid;
+	border: 1px #028fdf solid;
 }
 
 .twice-container {
@@ -468,30 +483,26 @@ nav ul li a {
 	color: white;
 }
 
-
-
 #hr-consalting {
-	border: 1px #028FDF solid;
+	border: 1px #028fdf solid;
 	border-radius: 20px;
 	width: 32%;
 	height: 326px;
 }
 
 #teaching-employees {
-	border: 1px #028FDF solid;
+	border: 1px #028fdf solid;
 	border-radius: 20px;
 	width: 66%;
 	height: 326px;
-	background: #028FDF;
+	background: #028fdf;
 	overflow: hidden;
 }
 
-#teaching-employees img{
+#teaching-employees img {
 	width: 172%;
 	height: 206px;
-
 }
-
 
 .last-container {
 	width: 100%;
@@ -505,19 +516,23 @@ nav ul li a {
 }
 
 #adaption-personal {
-	border: 1px #028FDF solid;
+	border: 1px #028fdf solid;
 	border-radius: 20px;
 	width: 49%;
 	height: 198px;
 }
 
-
 #consultation {
-	border: 1px #028FDF solid;
+	border: 1px #028fdf solid;
 	border-radius: 20px;
 	width: 49%;
 	height: 198px;
-	background: linear-gradient(0deg, rgba(0, 0, 0, 0.50) 0%, rgba(0, 0, 0, 0.50) 100%), #028FDF;
+	background: linear-gradient(
+			0deg,
+			rgba(0, 0, 0, 0.5) 0%,
+			rgba(0, 0, 0, 0.5) 100%
+		),
+		#028fdf;
 }
 
 .text-wrapper h3 {
@@ -532,7 +547,6 @@ nav ul li a {
 	font-size: 18px;
 	font-weight: 400;
 	color: white;
-
 }
 
 .arrow-text {
@@ -573,7 +587,6 @@ nav ul li a {
 	font-weight: 700;
 	color: white;
 	margin: 0;
-	
 }
 
 .team-text p {
@@ -582,23 +595,22 @@ nav ul li a {
 	font-weight: 400;
 	color: white;
 	margin: 0;
-
-
 }
 
-.vector img{ 
+.vector img {
 	top: 65%;
 	position: absolute;
 	z-index: -1;
 	width: 100%;
 	height: 30%;
-
-} 
+}
 
 .photo-team-container {
 	width: 100%;
 	height: 282px;
 	margin-top: 50px;
+
+	overflow: hidden;
 }
 
 .photo-wrappers {
@@ -608,7 +620,7 @@ nav ul li a {
 	height: 282px;
 }
 
-.photo-wrappers  {
+.photo-wrappers {
 	width: 100%;
 	height: 20%;
 }
@@ -627,7 +639,6 @@ nav ul li a {
 	font-size: 16px;
 	font-weight: 400;
 	color: white;
-
 }
 
 #first {
@@ -662,9 +673,9 @@ nav ul li a {
 
 .next-buttons {
 	display: flex;
-    align-items: center; /* Выравнивание элементов по вертикали */
-    justify-content: end; /* Выравнивание элементов по горизонтали */
-    height: 85px; 
+	align-items: center; /* Выравнивание элементов по вертикали */
+	justify-content: end; /* Выравнивание элементов по горизонтали */
+	height: 85px;
 	gap: 10px;
 }
 
@@ -677,24 +688,25 @@ nav ul li a {
 }
 
 .arrow {
-    background: #028FDF;
-    border-radius: 180px;
-    font-size: 24px; /* Размер стрелок, измените по вашим нуждам */
-    padding: 10px; /* Отступы вокруг стрелок, измените по вашим нуждам */
-    cursor: pointer; /* Курсор в виде руки при наведении */
+	background: #028fdf;
+	border-radius: 180px;
+	font-size: 24px; /* Размер стрелок, измените по вашим нуждам */
+	padding: 10px; /* Отступы вокруг стрелок, измените по вашим нуждам */
+	cursor: pointer; /* Курсор в виде руки при наведении */
 }
 
 .reviews-container {
 	width: 80%;
-	height: 676px;
+	height: 720px;
 	margin: 100px auto;
+
+	overflow: hidden;
 }
 
 .reviews-text {
 	display: flex;
 	justify-content: space-between;
 }
-
 
 .reviews-text h3 {
 	font-family: SF Pro Display;
@@ -716,41 +728,45 @@ nav ul li a {
 	width: 100%;
 	height: 490px;
 	margin-top: 50px;
+}
 
+.reviews-wrapper .swiper-slide img {
+	width: 100%;
+	height: 490px;
+}
+
+.reviews-wrapper .next-buttons {
+	height: auto;
+	margin-top: 50px;
 }
 
 .reviews-content {
 	display: flex;
 	justify-content: space-between;
-	
 }
 
 footer {
 	display: flex;
 	justify-content: center;
 	width: 90%;
-	border: 1px red dotted;
-	height: 365px;
 	color: white;
 	padding: 40px;
-	margin: 67px auto;
+	margin: 0 auto;
+	margin-top: 67px;
 }
 
 .footer-wrapper {
 	display: flex;
 	justify-content: space-between;
 	width: 95%;
-	border: 1px orange dotted;
-	height: 213px;
 }
 
 .logo-wrapper {
 	width: 50%;
-	border: 1px purple dotted;
 	height: 212px;
 }
 
-.logo-wrapper img{
+.logo-wrapper img {
 	width: 30%;
 }
 
@@ -760,18 +776,17 @@ footer {
 
 .info-wrapper p {
 	margin: 3px;
+
+	color: #fff;
+
+	font-size: 16px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
 }
 
 .info-wrapper {
 	margin: 0 137px;
-	border: 1px green dotted;
-	height: 210px;
-}
-
-.contacts-wrapper {
-	border: 1px blue dotted;
-	height: 212px;
-	
 }
 
 .contacts-wrapper h3 {
@@ -780,6 +795,13 @@ footer {
 
 .contacts-wrapper p {
 	margin: 1px;
+
+	color: #fff;
+
+	font-size: 16px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
 }
 
 #special {
@@ -792,8 +814,235 @@ footer {
 }
 
 .wrappers-two {
-	height: 212px;
 	display: flex;
 	justify-content: space-between;
 }
 
+.links {
+	margin-top: 20px;
+}
+
+@media screen and (max-width: 1200px) {
+	header .nav-menu ul {
+		gap: 15px;
+	}
+
+	.partners-logos {
+		justify-content: space-between;
+		gap: 30px;
+	}
+
+	.contact-container {
+		margin-top: auto;
+	}
+
+	.small-containers {
+		flex-wrap: wrap;
+		gap: 15px;
+	}
+
+	#care,
+	#confidence,
+	#result,
+	#loyalty {
+		width: 49%;
+	}
+
+	#executive-search,
+	#it-search,
+	#massive-search {
+		height: auto;
+	}
+
+	.twice-container {
+		padding-top: 25px;
+	}
+
+	.last-container {
+		height: auto;
+		padding-top: 25px;
+	}
+
+	#adaption-personal,
+	#consultation {
+		height: auto;
+	}
+
+	.reviews-wrapper .next-buttons {
+		margin-top: 20px;
+	}
+}
+
+@media screen and (max-width: 976px) {
+	header .nav-menu ul {
+		display: none;
+	}
+
+	.text-image {
+		font-size: 32px;
+	}
+
+	.partners-logos {
+		gap: 10px;
+	}
+
+	.triple-container {
+		height: auto;
+	}
+
+	.our-service-container {
+		height: auto;
+	}
+
+	.logo-wrapper img {
+		width: 217px;
+		height: 104px;
+	}
+
+	.partners-logos {
+		padding: 0 20px;
+	}
+
+	.employees-container {
+		height: auto;
+		flex-direction: column;
+	}
+
+	.video-container {
+		margin-top: 25px;
+	}
+
+	.light-text {
+		height: auto;
+	}
+
+	#care,
+	#confidence,
+	#result,
+	#loyalty {
+		width: 100%;
+	}
+
+	.our-service-text h2 {
+		font-size: 32px;
+	}
+
+	.reviews-container {
+		height: 740px;
+	}
+
+	.wrappers-two {
+		flex-direction: column;
+		gap: 15px;
+	}
+
+	.info-wrapper {
+		margin: 0;
+	}
+
+	.team-text h3 {
+		font-size: 32px;
+	}
+
+	.reviews-text h3 {
+		font-size: 32px;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.triple-wrapper {
+		flex-wrap: wrap;
+		gap: 25px;
+	}
+
+	#executive-search,
+	#it-search,
+	#massive-search {
+		height: auto;
+		width: 100%;
+	}
+
+	.twice-wrapper {
+		flex-wrap: wrap;
+		gap: 25px;
+	}
+
+	#hr-consalting,
+	#teaching-employees {
+		width: 100%;
+	}
+
+	.twice-container {
+		height: auto;
+	}
+
+	.last-wrapper {
+		flex-wrap: wrap;
+		gap: 25px;
+	}
+
+	#adaption-personal,
+	#consultation {
+		width: 100%;
+		height: auto;
+	}
+}
+
+@media screen and (max-width: 576px) {
+	.footer-wrapper {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.logo-wrapper {
+		height: auto;
+		width: 100%;
+	}
+
+	.wrappers-two {
+		width: 100%;
+	}
+
+	.team-text {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.reviews-container {
+		height: 800px;
+	}
+
+	.reviews-text {
+		flex-direction: column;
+	}
+
+	.our-service-text {
+		flex-direction: column;
+	}
+
+	.values-text h2 {
+		font-size: 45px;
+	}
+}
+
+@media screen and (max-width: 320px) {
+	#teaching-employees {
+		height: auto;
+	}
+
+	#teaching-employees img {
+		width: 100%;
+	}
+
+	.reviews-container {
+		height: 900px;
+	}
+
+	footer {
+		padding: 0;
+	}
+
+	.employees h1 b {
+		font-size: 38px;
+	}
+}
