--- a/main.css
+++ b/main.css
@@ -51,6 +51,15 @@ header {
 	box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
 }
 
+/* .box-shadow {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	box-shadow: 200px 20px 400px -100px rgba(0, 0, 0, 0.5);
+} */
+
 main {
 	padding-top: 20px;
 }
@@ -113,6 +122,11 @@ nav ul li a {
 	height: 24px;
 }
 
+.lang {
+	position: relative;
+	display: inline-block;
+}
+
 .lang .Rus {
 	display: flex;
 	color: white;
@@ -125,15 +139,45 @@ nav ul li a {
 	font-size: 20px;
 	font-style: normal;
 	font-weight: 400;
+	cursor: pointer;
 }
+
+.Rus img {
+	width: 25px;
+}
+
+.dropdown {
+	display: flex;
+	flex-direction: column;
+	height: 0px;
+	overflow: hidden;
+	position: absolute;
+	top: 100%;
+	left: 0;
+	background-color: #0c1621;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+	transition: .4s;
+}
+
+.dropdown-item {
+	text-align: left;
+	margin-top: 10px;
+	text-decoration: none;
+  }
+  
+  
+.Rus:hover .dropdown {
+	height: 73px;
+	border-radius: 4px;
+	padding: 0px 5px 0px 0px;
+  }
+
 
 .swiper {
 	width: 80%;
 	margin: 20px auto;
 	border-radius: 20px;
-	/* border-style: solid;
-	border-width: 5px;
-	border-color: white lightblue yellow; */
 }
 
 .swiper-slide {
@@ -270,10 +314,6 @@ nav ul li a {
 	margin: 0;
 	color: white;
 }
-
-/* .employees h1 b {
-	color: grey;
-} */
 
 .light-text {
 	width: 95%;
